Version Next

    - Fixed bug with `--listBlocks' threads doing redundant overlapping queries
    - Refactor to support multiple different compression algorithms

Version 1.6.2 released June 14, 2020

    - Require test directory to be absolute unless `-f' flag given (issue #143)
    - Show HTTP error response payload content when `--debug-http' flag given
    - List blocks in the background; added `--listBlocksThreads' (issue #24)
    - Don't let IAM credentials expire while listing blocks (issue #146)
    - Fixed bug parsing "--configFile" inside comma-separated option list

Version 1.6.1 released December 30, 2020

    - Fixed integer overflow bug setting "x-amz-meta-s3backer-filesize" (issue #141)

Version 1.6.0 released December 23, 2020

    - Added `--sse-key-id' flag (issue #137)
    - Log a more useful error message when IAM credentials not found (issue #136)
    - Warn on startup if disk space is insufficient for disk cache (issue #138)
    - Added zero block cache to better handle fstrim operations (issue #139)

Version 1.5.6 released October 30, 2020

    - Fixed phantom write error when server-side-encryption used (issue #135)
    - Allow bucket names with "subdirectory" for prefix (issue #130)
    - Added `--configFile' flag (issue #129)
    - Added `--accessKeyEnv' flag (issue #128)
    - Removed deprecated `--rrs' flag

Version 1.5.5 released August 22, 2020

    - Added `--no-vhost' flag (issue #117)
    - Added `--blockCacheNumProtected' flag (pr #119)
    - Added `--test-errors', `--test-delays', and `--test-discard'
    - Disallow stream encryption ciphers (issue #123)

Version 1.5.4 released October 8, 2019

    - Only set "x-amz-server-side-encryption" header with PUT requests (issue #116)
    - Don't kill IAM thread unless actually started (issue #115).

Version 1.5.3 released August 9, 2019

    - Fixed bug where IAM update thread was killed after fork (issue #115)
    - Fixed use-after-free bug in block_cache_verified() (issue #113)